2006-11-09  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/*/baselistener.?xx: TopWindowListener and 
	SimpleActionObject classes added.

	* source/*/dialog.?xx: added listener to handle window closing
	event to the main and constraint dialogs in order to handle 
	closing by clicking the close button in the title bar or hitting
	the escape key.

	* source/*/optiondlg.?xx: added listener to handle window closing
	event.  Refactored code to hide private member variables.

	* source/*/basedlg.?xx (registerListener, unregisterListener): 
	added to handle (un)registering of TopWindowListener instances.

	* source/ui/xcalc.cxx: put some experimental code to add a new 
	menu item via UNO added but turned it off by default.

2006-08-19  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* prj/build.lst: 
	* util/makefile.mk: added tool subdirectory.

	* source/inc/tool/timer.hxx:
	* source/tool/timer.cxx: Timer class added.

	* source/inc/basedlg.hxx:
	* source/ui/basedlg.cxx (addCheckBox): added.

	* source/inc/baselistener.hxx:
	* source/ui/baselistener.cxx: modified ActionObject and ActionListener to 
	eliminate slicing problem in derived classes.

	* source/inc/listener.hxx:
	* source/ui/listener.cxx: fixed unused parameter warnings and added listener
	to the Option button.

	* source/numeric/lpsolve.cxx:
	* source/inc/numeric/lpbase.hxx:
	* source/numeric/lpbase.cxx:
	* source/inc/numeric/exception.hxx:
	* source/numeric/exception.cxx: moved exception classes from lpbase.?xx 
	into their own source files.

	* source/inc/option.hxx:
	* source/ui/option.cxx: added model type option.

	* source/inc/optiondlg.hxx:
	* source/ui/optiondlg.cxx: added check box for model type option.

	* source/numeric/makefile.mk: whitespace -> tab for indenting.

	* source/numeric/nlpqnewton.cxx: set the maximum iteration value and the
	maximum duration to prevent infinite loops (values hard-coded for now).

	* source/ui/scsolver.hrc: