@@ -1,3 +1,14 @@
+2006-11-11  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* source/*/basedlg.?xx:
+	* source/*/dialog.?xx:
+	* source/*/msgdlg.?xx:
+	* source/*/optiondlg.?xx: added pure virtual function close() to
+	BaseDialog and their implementations in the derived classes.
+
+	* source/ui/listener.cxx (CloseBtnListener): switched to using
+	close() instead of setVisible(false) for closing action.
+
 2006-11-09  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
 	* source/*/baselistener.?xx: TopWindowListener and 
